--- a/index.html
+++ b/index.html
@@ -3,24 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css">
     <title>Color block</title>
   </head>
   <body>
-    <h1>Lighten/Darker color</h1>
-    <div class="outer-block">
+    <div class="container flex flex--column flex--justify-space-around">
+      <h1>Lighten/Darken color</h1>
 
-      <div id="color input">
-      <label>Color #</label>
-      <input type="text" id="Color" placeholder="#000000"/>
+      <div class="color input flex flex--column">
+        <label for="colorPicker">Color (RGB)</label>
+        <input type="color" name="color" id="colorPicker"/>
       </div>
 
-      <div id="light-switch"></div>
+      <div class="switch-container">
+        <label for="switch" class="isActive">Darken</label>
+        <input type="checkbox" id="switch" class="switchInput">
+        <label for="switch" class="switchToggle">Lighten</label>
+      </div>
 
-      <div id="light-switch-bar"></div>
+      <div class="light-switch-bar">
+        <label for="colorSlider"><span>0</span>%</label>
+        <input type="range" min="0" max="100" value="0" id="colorSlider">
+      </div>
 
-      <div id="input-color-block"><h4>Input color:</h4></div>
+      <div><p>Input color:</p>
+        <div class="inputColor"></div>
+      </div>
 
-      <div id="alternate-color-block"><h4>Alternate color:</h4></div>
+      <div><p>Altered color</p>
+        <div class="outputColor"></div>
+      </div>
 
     </div>
     <!-- 'Connect' JS to this HTML file. -->
