--- a/index.html
+++ b/index.html
@@ -3,10 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <title>Color-picker</title>
   </head>
   <body>
+    <div class="container">
+      <h1>Lighten/Darken Color</h1>
+
+      <div>
+      <label for="color-picker">Color input</label>
+      <input name="color-picker" type="color" id="color-picker"/>
+      </div>
+
+      <div class="switch-container">
+        <label for="switch" class="isActive">Lighten</label>
+        <input type="checkbox" id="switch" class="switch-input"/>
+        <label for="switch" class="switchToggle">Darken</label>
+      </div>
+
+      <div class="color-slider">
+        <label for="color-slider"><span>0</span>%</label>
+        <input type="range" min="0" max="100" id="color-slider"/>
+      </div>
+
+      <div><p>Input Color</p></div>
+        <div class="input-color"></div>
+      </div>
+
+      <div><p>Altered Color</p>
+        <div class="altered-color"></div>
+      </div>
+
+    </div>
 
     <!-- 'Connect' JS to this HTML file. -->
     <script src="./scripts.js"></script>
