initial css layout

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
       </div>
 
       <div><p>Input Color</p></div>
-        <div class="input-color"></div>
+        <div class="input-color">
       </div>
 
       <div><p>Altered Color</p>
         <div class="altered-color"></div>
       </div>
 
-    </div>
+      </div>
 
     <!-- 'Connect' JS to this HTML file. -->
     <script src="./scripts.js"></script>
