Added change to input/output color blocks depending on the input color, added toggle switch to switch-container labels

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <h1>Lighten/Darken Color</h1>
 
       <div>
-      <label for="color-picker">Color input</label>
-      <input name="color-picker" type="color" id="color-picker"/>
+      <label for="colorPicker">Color input</label>
+      <input name="color-picker" type="color" id="colorPicker"/>
       </div>
 
       <div class="switch-container">
@@ -32,7 +32,7 @@
       </div>
 
       <div><p>Altered Color</p>
-        <div class="altered-color"></div>
+        <div class="output-color"></div>
       </div>
 
       </div>
