Add percentage to the slider when sliding

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       </div>
 
       <div class="color-slider">
-        <label for="color-slider"><span>0</span>%</label>
-        <input type="range" min="0" max="100" id="color-slider"/>
+        <label for="color-slider" id="slider-text">0%</label>
+        <input type="range" min="0" max="100" value ="0" id="color-slider"/>
       </div>
 
       <div><p>Input Color</p></div>
@@ -32,7 +32,7 @@
       </div>
 
       <div><p>Altered Color</p>
-        <div class="output-color"></div>
+        <div class="output-color" id="outputColor"></div>
       </div>
 
       </div>
