small fixes in css(padding), html(classes name), js(spaces)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
       <div class="color-slider">
         <label for="color-slider" id="slider-text">0%</label>
+        <div>
         <input type="range" min="0" max="100" value ="0" id="color-slider"/>
+      </div>
       </div>
 
       <div><p>Input Color</p></div>
