Add functionality for slider change in browser

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
       </div>
 
       <div class="light-switch-bar">
-        <label for="colorSlider"><span>0</span>%</label>
+        <div>
+        <label for="colorSlider" id="sliderText">%</label>
+        </div>
         <input type="range" min="0" max="100" value="0" id="colorSlider">
       </div>
 
