--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       <div id="root"></div>
     </div>
     <!-- 'Connect' JS to this HTML file. -->
-    <script src="./scripts.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
